<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/public_bg"
    android:orientation="vertical">

    <com.qkl.online.mining.app.ui.view.HeaderView
        android:id="@+id/activity_update_pay_pwd_headerview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="30dip"
        android:orientation="vertical"
        android:padding="15dip">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dip"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/activity_update_pay_pwd_old_et"
                android:layout_width="0dip"
                android:layout_height="50dip"
                android:layout_weight="1"
                android:background="@android:color/transparent"
                android:hint="@string/update_password_old_pwd"
                android:inputType="textPassword"
                android:textColor="@color/color_ffffff"
                android:textColorHint="@color/color_ffffff"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/activity_update_pay_pwd_forget_bt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/shape_get_msgcode_bg"
                android:paddingBottom="5dip"
                android:paddingLeft="10dip"
                android:paddingRight="10dip"
                android:paddingTop="5dip"
                android:text="@string/login_forget_password"
                android:textColor="@color/color_9441EF"
                android:textSize="14sp" />

        </LinearLayout>

        <View style="@style/view_line" />

        <EditText
            android:id="@+id/activity_update_pay_pwd_new_et"
            android:layout_width="match_parent"
            android:layout_height="50dip"
            android:layout_marginTop="10dip"
            android:background="@android:color/transparent"
            android:hint="@string/update_password_new_pwd"
            android:inputType="textPassword"
            android:textColor="@color/color_ffffff"
            android:textColorHint="@color/color_ffffff"
            android:textSize="14sp" />

        <View style="@style/view_line" />

        <EditText
            android:id="@+id/activity_update_pay_pwd_new_agani_et"
            android:layout_width="match_parent"
            android:layout_height="50dip"
            android:layout_marginTop="10dip"
            android:background="@android:color/transparent"
            android:hint="@string/update_password_new_pwd_affirm"
            android:inputType="textPassword"
            android:textColor="@color/color_ffffff"
            android:textColorHint="@color/color_ffffff"
            android:textSize="14sp" />

        <View style="@style/view_line" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dip"
            android:text="@string/update_pay_password_tip_title"
            android:textColor="@color/color_FF6700"
            android:textSize="13sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dip"
            android:text="@string/register_tips"
            android:textColor="@color/color_9441EF"
            android:textSize="13sp" />

        <TextView
            android:id="@+id/activity_update_pay_password_submit_bt"
            android:layout_width="match_parent"
            android:layout_height="40dip"
            android:layout_marginLeft="10dip"
            android:layout_marginRight="10dip"
            android:layout_marginTop="30dip"
            android:background="@drawable/selector_login_bt_bg"
            android:gravity="center"
            android:text="@string/forget_pwd_update"
            android:textColor="@color/color_ffffff"
            android:textSize="14sp" />

    </LinearLayout>

</LinearLayout>