<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/public_bg">

    <com.qkl.online.mining.app.ui.view.HeaderView
        android:id="@+id/purchase_star_headerview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/purchase_star_layout"
        android:layout_below="@id/purchase_star_headerview"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="10dip">

        <ImageView
            android:id="@+id/purchase_star_image"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="center" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/purchase_star_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="20dip"
        android:background="@drawable/shape_white_bg"
        android:orientation="vertical"
        android:padding="10dip">

        <TextView
            android:id="@+id/purchase_star_name_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/purchase_star_name_txt"
            android:textColor="@color/color_000000"
            android:textSize="16sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/purchase_star_price_txt"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dip"
                android:layout_weight="1"
                android:text="@string/purchase_star_price_txt"
                android:textColor="@color/color_333333"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/purchase_star_suanli_txt"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dip"
                android:layout_weight="1"
                android:text="@string/purchase_star_suanli_txt"
                android:textColor="@color/color_333333"
                android:textSize="14sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/purchase_star_zhouqi_txt"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dip"
                android:layout_weight="1"
                android:text="@string/purchase_star_zhouqi_txt"
                android:textColor="@color/color_333333"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/purchase_star_chanliang_txt"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dip"
                android:layout_weight="1"
                android:text="@string/purchase_star_chanliang_txt"
                android:textColor="@color/color_333333"
                android:textSize="14sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/purchase_star_ticketdesc_txt"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dip"
                android:layout_weight="1"
                android:text="@string/purchase_star_ticketdesc_txt"
                android:textColor="@color/color_333333"
                android:textSize="14sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:visibility="gone">

            <TextView
                android:id="@+id/purchase_star_ticketprice_txt"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dip"
                android:layout_weight="1"
                android:text="@string/purchase_star_ticketprice_txt"
                android:textColor="@color/color_333333"
                android:textSize="14sp" />

        </LinearLayout>

        <TextView
            android:id="@+id/purchase_star_tip_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="35dip"
            android:text="@string/purchase_star_tips_txt"
            android:textColor="@color/color_FF6700"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/purchase_star_puchase_bt"
            android:layout_width="match_parent"
            android:layout_height="40dip"
            android:layout_marginBottom="20dip"
            android:layout_marginLeft="10dip"
            android:layout_marginRight="10dip"
            android:layout_marginTop="15dip"
            android:background="@drawable/selector_login_bt_bg"
            android:gravity="center"
            android:text="@string/purchase_star_puchase_bt"
            android:textColor="@color/color_ffffff"
            android:textSize="14sp" />

    </LinearLayout>

</RelativeLayout>